<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_vacuum_gripper_debugger</name>
  <version>0.0.0</version>
  <description>The gazebo_ros_vacuum_gripper_debugger package</description>

  <maintainer email="sakuma.tatsuya.sn1@is.naist.jp">tatsuya-s</maintainer>

  <license>BSD, Apache 2.0</license>

  <author email="sakuma.tatsuya.sn1@is.naist.jp">tatsuya-s</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>gazebo_dev</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
